--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "floww.ai-backend",
   "version": "1.0.0",
   "description": "floww ai Assignment",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
